# NAOKin

./: CMakeLists.txt  README.md  main.cpp
.qi/: path.conf
build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
build-local/sdk/share/qi/: path.conf
build-rinobot-robot/: CMakeCache.txt  Makefile  cmake_install.cmake
build-rinobot-robot/sdk/share/qi/: path.conf
build-robot/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
build-robot/sdk/share/qi/: path.conf
src/: NAOKin.cpp  NAOKin.h
